--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && npx webpack",
+    "init": "npx sb init -f && npm install --force",
     "prepublishOnly": "npm run figmagic && npm run build",
     "figmagic:init": "npx figmagic init",
     "figmagic": "npx figmagic",
@@ -27,28 +28,30 @@
   },
   "peerDependencies": {
     "prop-types": "latest",
-    "react": "17",
-    "react-dom": "17",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "styled-components": "5"
   },
   "devDependencies": {
-    "@babel/core": "latest",
-    "@babel/preset-env": "latest",
-    "@babel/preset-react": "latest",
-    "@storybook/addon-actions": "^6.3.1",
-    "@storybook/addon-essentials": "^6.3.1",
-    "@storybook/addon-links": "^6.3.1",
-    "@storybook/react": "^6.3.1",
-    "babel-loader": "latest",
-    "babel-plugin-module-resolver": "latest",
+    "@babel/core": "7.17.8",
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-react": "7.16.7",
+    "@storybook/addon-actions": "^6.4.19",
+    "@storybook/addon-essentials": "^6.4.19",
+    "@storybook/addon-interactions": "^6.4.19",
+    "@storybook/addon-links": "^6.4.19",
+    "@storybook/react": "^6.4.19",
+    "@storybook/testing-library": "^0.0.9",
+    "babel-loader": "8.2.4",
+    "babel-plugin-module-resolver": "4.1.0",
     "chromatic": "5",
-    "eslint": "latest",
+    "eslint": "8.11.0",
+    "eslint-plugin-storybook": "^0.5.7",
     "figmagic": "4",
-    "file-loader": "6",
-    "prettier": "latest",
-    "webpack": "^4",
-    "webpack-cli": "4",
+    "file-loader": "6.2.0",
+    "prettier": "2.6.0",
+    "webpack": "4",
+    "webpack-cli": "4.9.2",
     "webpack-dev-server": "3"
-  },
-  "dependencies": {}
+  }
 }
