chore(): pin and fix breaking dependencies

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acmecorp-potted-plants-components-starter",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "React component library with components generated and/or composed with Figmagic. Made for The newline Guide to React Component Design Systems with Figmagic.",
   "keywords": [
     "acmecorp",
@@ -15,47 +15,51 @@
   "scripts": {
     "clean": "rm -rf dist",
     "build": "npm run clean && npx webpack",
-    "init": "npx sb init -f && npm install --force && rm -rf src/stories",
+    "init": "npm install --force && rm -rf src/stories",
     "prepublishOnly": "npm run figmagic && npm run build",
     "figmagic:init": "npx figmagic init",
     "figmagic": "npx figmagic",
     "start": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
-    "storybook": "start-storybook -p 6006"
+    "build-storybook": "storybook build",
+    "storybook": "storybook dev -p 6006"
   },
   "resolutions": {
     "@storybook/{app}/webpack": "^5"
   },
   "peerDependencies": {
     "prop-types": "latest",
-    "react": "18",
-    "react-dom": "18",
+    "react": "17",
+    "react-dom": "17",
     "styled-components": "5"
   },
   "devDependencies": {
     "@babel/core": "7",
     "@babel/preset-env": "7",
     "@babel/preset-react": "7",
-    "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
-    "@storybook/addon-interactions": "^6.5.12",
-    "@storybook/addon-links": "^6.5.12",
-    "@storybook/builder-webpack4": "^6.5.12",
-    "@storybook/builder-webpack5": "^6.5.12",
-    "@storybook/manager-webpack4": "^6.5.12",
-    "@storybook/manager-webpack5": "^6.5.12",
-    "@storybook/react": "^6.5.12",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "6.5.12",
+    "@storybook/addon-essentials": "6.5.12",
+    "@storybook/addon-interactions": "6.5.12",
+    "@storybook/addon-links": "6.5.12",
+    "@storybook/blocks": "^7.0.2",
+    "@storybook/builder-webpack4": "6.5.12",
+    "@storybook/builder-webpack5": "6.5.12",
+    "@storybook/manager-webpack4": "6.5.12",
+    "@storybook/manager-webpack5": "6.5.12",
+    "@storybook/react": "6.5.12",
+    "@storybook/react-webpack5": "^7.0.2",
+    "@storybook/testing-library": "0.0.13",
     "babel-loader": "9",
     "babel-plugin-module-resolver": "4",
     "chromatic": "5",
     "eslint": "8",
-    "eslint-plugin-storybook": "^0.5.7",
+    "eslint-plugin-storybook": "0.5.7",
     "figmagic": "4",
     "file-loader": "6",
     "prettier": "2",
-    "react": "18",
-    "react-dom": "18",
+    "prop-types": "^15.8.1",
+    "react": "17",
+    "react-dom": "17",
+    "storybook": "^7.0.2",
     "webpack": "5",
     "webpack-cli": "4",
     "webpack-dev-server": "3"
